--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
         uses: warchant/setup-sonar-scanner@v7
 
       - name: Sonar Scanner Analysis
-        run: sonar-scanner \
+        run: |
+          sonar-scanner \
           -Dsonar.host.url=${{secrets.SONAR_URL}} \
           -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
