deploy helm chart

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,56 @@ jobs:
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
+  
+  Deploy-to-EKS:
+    needs: Build-and-Publish
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      
+      - name: Setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Get Kubeconfig file
+        run: |
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+
+      - name: Print Config File
+        run: |
+          cat ~/.kube/config
+
+      - name: Login to ECR
+        run: kubectl create secret docker-registry regcred \
+          --docker-server=${{ secrets.REGISTRY }} \
+          --docker-username=AWS \
+          --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
+        
+      - name: Deploy Helm
+        uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+          cluster-name: ${{ env.EKS_CLUSTER }}
+          chart-path: helm/vprofilecharts
+          namespace: default
+          values: |
+            appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}
+            apptag=${{ github.run_number }}
+          name: vprofile-stack
+
+
+
+
+
+      - name: Deploy to EKS
+        run: |
+          helm upgrade --install vprofileapp ./helm/vprofilecharts \
+            --set appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }} \
+            --set apptag=${{ github.run_number }} \
+            --namespace vprofileapp
