--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,10 +95,8 @@ jobs:
           cat ~/.kube/config
 
       - name: Login to ECR
-        run: kubectl create secret docker-registry regcred \
-          --docker-server=${{ secrets.REGISTRY }} \
-          --docker-username=AWS \
-          --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
+        run: |
+          kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=AWS --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
         
       - name: Deploy Helm
         uses: bitovi/github-actions-deploy-eks-helm@v1.2.8
