--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,6 +96,7 @@ jobs:
 
       - name: Login to ECR
         run: |
+          kubectl delete secret regcred --ignore-not-found=true
           kubectl create secret docker-registry regcred --docker-server=${{ secrets.REGISTRY }} --docker-username=AWS --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
         
       - name: Deploy Helm
